adjust alignement of game box and fix highlighting bug

--- a/src/frontend/static/css/endgame.css
+++ b/src/frontend/static/css/endgame.css
@@ -207,7 +207,6 @@
   position: relative;
   cursor: default;
   font-size: 20px;
-  font-weight: bold;
   display: none;
 }
 
